Creating home and about pages

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,2 @@
-<h1>Hello Photos</h1>
-
-<%@photos.each do |p|%>
-	<span><%= p %></span>
-<%end%>
+<h1>Welcome to my app!</h1>
+<p>Sign up <%= link_to "here", "#{}" %>.</p>
